# quill-compiler

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PERFORMANCE.md  README.md  benchmark.sh  cleanup_for_github.sh  compile.sh  comprehensive_benchmark.sh  performance_analysis.sh  runtime.c  test_simple.quill
benchmark_results/: benchmark_20250907.md
benchmarks/: hft_simulation.quill  portfolio_risk.quill
benchmarks/reference/: hft_simulation.py  portfolio_risk.py
examples/: hello.quill  math.quill  numeric_ops_test.quill  power_of_two_test.quill  type_test.quill
include/: ast.h  codegen.h  lexer.h  optimization_passes.h  parser.h  timer.h  token.h  type_checker.h  type_system.h
optimization/: arithmetic_simplification.cpp  constant_folding.cpp  dead_code_elimination.cpp  function_inlining.cpp  optimization_manager.cpp  type_directed_optimizations.cpp  type_directed_pass_impl.cpp
src/: ast.cpp  codegen.cpp  lexer.cpp  main.cpp  parser.cpp  timer.cpp
types/: type_checker.cpp  type_system.cpp
